--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -45,13 +45,6 @@ html {
     box-sizing: border-box;
 }
 
-.inter {
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: auto;
-}
-
 a {
     text-decoration: none;
     color: white;
@@ -70,111 +63,82 @@ body {
     font-family: 'Circular', sans-serif;
 }
 
-nav {
-    z-index: 9999;
-    background-color: black;
-    color: white;
-    height: 4em;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-}
-
-.responsive_nav {
-    display: none;
-}
-
-nav .left,
-nav .right {
-    font-size: 1.2em;
-    font-weight: 300;
-    margin: 0 5%;
-    display: flex;
-    align-items: center;
-    gap: 6em;
-}
-
-nav .left {
-    margin: 0 5%;
-    display: flex;
-    align-items: center;
-    gap: 3em;
-}
-
-nav .logo {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-nav .logo .logo_img {
-    width: 2.2em;
-}
-
-nav .left .logo_tittle {
-    font-size: 1.5em;
-    font-weight: 900;
-}
-
-nav .login {
-    width: 2.3em;
-}
-
-nav .right {
-    margin: 0 15px;
-    flex-direction: column;
-    gap: 5px;
-    justify-content: center;
-    cursor: pointer;
-}
-
-nav .right .user_logo {
-    cursor: pointer;
-    all: unset;
-    color: white;
-    font-size: 1.3em;
-    text-decoration: none;
-    padding: 0;
-    border: none;
-    background: none;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    gap: 5px;
-    width: 7em;
-}
-
-nav .right .log_text {
-    color: white;
-    font-size: 0.6em;
-}
-
-
 /* ------------HOME------------ */
 #banner {
-    padding-top: 4em;
-    height: 70vh;
+    height: 100vh;
     min-height: 600px;
     display: flex;
-    justify-content: left;
-    background-color: var(--blue);
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    text-align: center;
+    background-color: white;
+    flex-direction: column;
+
 }
 
-#banner div {
-    margin-left: 15%;
-    margin-top: 5%;
+#banner #bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 1;
 }
 
+
+#banner .logo-container {
+    position: relative;
+    z-index: 10;
+    width: clamp(200px, 50%, 300px);
+    height: clamp(200px, 50%, 300px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#banner .logo-container .logo {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: levitate 4s infinite;
+}
+#banner .logo-container button {
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+}
+@keyframes levitate {
+    0%,
+    100% {
+      transform: translate(-50%, -50%);
+    }
+    50% {
+      transform: translate(-50%, -40%);
+    }
+  }
 #banner h1 {
     color: white;
     font-weight: 900;
+}
 
+#banner div {
+    padding-bottom: 10rem;
+    z-index: 10;
 }
 
 #banner .Listify_tittle {
     font-size: clamp(4em, 10vw, 9em);
-    color: var(--light-green);
+    /* color: var(--light-green); */
 }
 
 #banner h1 .spotify {
@@ -189,64 +153,8 @@ nav .right .log_text {
 
 #banner h2 {
     color: white;
+    opacity: 70%;
     font-size: clamp(2em, 3vw, 3em);
-}
-
-.welcome_button {
-    margin-top: 5%;
-    cursor: pointer;
-    background: var(--pink);
-    color: white;
-    font-family: inherit;
-    padding: 0.35em;
-    padding-left: 1.2em;
-    font-size: 17px;
-    font-weight: 500;
-    border-radius: 0.9em;
-    border: none;
-    letter-spacing: 0.05em;
-    display: flex;
-    align-items: center;
-    box-shadow: inset 0 0 1.6em -0.6em #714da6;
-    overflow: hidden;
-    position: relative;
-    height: 2.8em;
-    padding-right: 3.3em;
-    width: 200px;
-}
-
-.welcome_button .icon {
-    background: white;
-    margin-left: 1em;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    bottom: 0.3em;
-    height: 2.2em;
-    width: 2.2em;
-    border-radius: 0.7em;
-    box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
-    right: 0.3em;
-    transition: all 0.3s;
-}
-
-.welcome_button:hover .icon {
-    width: calc(100% - 0.6em);
-}
-
-.welcome_button .icon svg {
-    width: 1.1em;
-    transition: transform 0.3s;
-    color: var(--pink);
-}
-
-.welcome_button:hover .icon svg {
-    transform: translateX(0.1em);
-}
-
-.welcome_button:active .icon {
-    transform: scale(0.95);
 }
 
 /* TUTORIAL SECTION */
@@ -394,9 +302,11 @@ nav .right .log_text {
     align-items: center;
     background-color: white;
 }
+
 #create_playlist.hide {
     display: none;
 }
+
 #create_playlist .container {
     height: auto;
     min-height: 350px;
@@ -562,6 +472,7 @@ nav .right .log_text {
 #create_playlist #playlist_form .playlist_container .bottom #empty.hidden {
     display: none;
 }
+
 .loader_container {
     position: absolute;
     width: 100vw;
@@ -570,16 +481,19 @@ nav .right .log_text {
     align-items: center;
     justify-content: center;
 }
+
 .loader {
     display: none;
     position: relative;
     width: 80px;
     height: 80px;
-  }
-  .loader.show {
+}
+
+.loader.show {
     display: inline;
-  }
-  .loader div {
+}
+
+.loader div {
     box-sizing: border-box;
     display: block;
     position: absolute;
@@ -590,24 +504,29 @@ nav .right .log_text {
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     border-color: var(--green) transparent transparent transparent;
-  }
-  .loader div:nth-child(1) {
+}
+
+.loader div:nth-child(1) {
     animation-delay: -0.45s;
-  }
-  .loader div:nth-child(2) {
+}
+
+.loader div:nth-child(2) {
     animation-delay: -0.3s;
-  }
-  .loader div:nth-child(3) {
+}
+
+.loader div:nth-child(3) {
     animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
+}
+
+@keyframes lds-ring {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
+}
 
 
 .separator {
@@ -710,17 +629,13 @@ nav .right .log_text {
 @media(max-width:1024px) {
     #banner {
         padding-top: 4em;
-        height: 70vh;
+        height: 100vh;
         min-height: 600px;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: var(--blue);
     }
 
-    .welcome_button {
-        margin: 10% auto;
-    }
 
     #banner div {
         text-align: center;
