--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -15,6 +15,7 @@
     ></script>
   </head>
   
-  {% block content%} {% endblock %}
-  <script src="{% static 'js/menu.js' %}"></script>
+  {% block content%} 
+  
+  {% endblock %}
 </html>
