--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content%}
 <body>
 
-  <section id="create_playlist">
+  <section id="create-playlist">
     <div class="container">
       <h3>Select the artists</h3>
       <div class="wrapper">
