--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playlisty -Generate Playlists</title>
+    <link rel="stylesheet" href="{% static 'styles/global.css'%}" />
     <link rel="stylesheet" href="{% static 'styles/main.css'%}" />
     <link rel="icon" href="{% static 'img/Spotify_logo.png'%}" />
     <script
