Add height to results container

--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -193,7 +193,8 @@ footer {
     margin-top: 2.5rem;
     opacity: 0;
     transition: 0.4s opacity ease-in-out;
-    height: 30rem;
+    height: 10rem;
+    align-items: center;
   }
   .results-container.show{
     opacity: 1;
