--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -101,6 +101,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    min-height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -163,7 +164,7 @@
 #login-to-start h1,
 #create-playlist h1 {
     margin: 5rem 0;
-    font-size: clamp(2.5rem, 4vw, 6rem);
+    font-size: clamp(2.5rem, 3vw, 5rem);
 }
 
 #login-to-start .text-container {
@@ -186,6 +187,22 @@ footer {
 }
 
 /* CREATE PLAYLIST */
+#create-playlist .container {
+    display: flex;
+    gap: 10px;
+}
+#create-playlist .container select {
+    width: 40%;
+    height: 40px;
+    padding: 10px;
+    transition: .2s linear;
+    border: 2.5px solid black;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+
 .results-container {
     display: flex;
     flex-wrap: wrap;
@@ -195,26 +212,32 @@ footer {
     transition: 0.4s opacity ease-in-out;
     height: 10rem;
     align-items: center;
-  }
-  .results-container.show{
+    
+}
+
+.results-container.show {
     opacity: 1;
-  }
-  .results-container ul {
+}
+
+.results-container ul {
     justify-content: center;
     list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
     flex-wrap: wrap;
-  }
-  #create-playlist h2{
+}
+
+#create-playlist h2 {
     display: hidden;
     opacity: 0;
-  }
-  #create-playlist h2.show{
+}
+
+#create-playlist h2.show {
     opacity: 1;
-  }
-  .results-container li {
+}
+
+#create-playlist .results-container li {
     height: 50px;
     padding: 8px;
     margin: 5px;
@@ -226,14 +249,62 @@ footer {
     border-radius: 20px;
     font-weight: bold;
     transition: transform 0.3s ease;
-  }
-  .results-container ul li:hover {
+}
+
+#create-playlist .results-container ul li:hover {
     transform: translateY(-5px);
-  }
+}
 
 
-  .results-container li img {
+#create-playlist .results-container li img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-  }
+}
+
+#create-playlist .playlist-container {
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    width: 40%;
+    padding: 2rem;
+}
+#create-playlist .playlist-container li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    background-color: lightgray;
+    border-radius: 20px;
+    margin: 5px;
+}
+#create-playlist .playlist-container li div {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+#create-playlist .playlist-container li div p {
+    font-weight: bold;
+}
+#create-playlist .playlist-container li div select {
+    height: 30px;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+#create-playlist .playlist-container li div select option {
+    text-align: center;
+    font-weight: 700;
+}
+#create-playlist .playlist-container li .name-type-container{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+#create-playlist .playlist-container li img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
